# HW_WEB_10_Django

./: pyproject.toml
hw_project/: db.sqlite3
hw_project/hw_project/: settings.py
hw_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_project/quotes/migrations/: 0001_initial.py  0002_author_description.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  author.html  base.html  index.html  tags.html
hw_project/quotes/templatetags/: extract.py
hw_project/users/: forms.py  urls.py  views.py
hw_project/users/templates/users/: login.html  password_reset.html  register.html
hw_project/utils/: add_quotes_to_mongo.py  migration.py
