[tool.poetry]
name = "hw-django"
version = "0.1.0"
description = ""
authors = ["Dmitriy Teplinskiy <99141331+MONSMIN@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hw_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
pymongo = "^4.4.1"
quotes = "^0.0.3"
psycopg-binary = "^3.1.10"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
